feat: add sketchy style sheet
Signed-off-by: Patrick Kollitsch <83281+davidsneighbour@users.noreply.github.com>

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -14,7 +14,8 @@ import patrick from '@/assets/images/patrick-kollitsch.jpg';
 
 	<body>
 		<div class="grid place-items-center h-screen content-center">
-			<img src={patrick.src} class="w-96 h-96 rounded-full"/>
+			<img src={patrick.src} class="w-96 h-96 rounded-full shadow-lg"/>
+      davidsneighbour.dev - TBD
 		</div>
 	</body>
 </html>
